# k-means

./: CMakeLists.txt  README.md
src/: ftools.hpp  main.cpp
